# IAMTheGateway

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.gradle.kts
.github/workflows/: ci.yml
STEPS/: HANDOFF.md  Phase01_WriteUp.md  Phase02_WriteUp.md  Phase03_WriteUp.md  Phase04_WriteUp.md  Phase05_WriteUp.md  Phase06_WriteUp.md  Phase07_WriteUp.md  Phase08_WriteUp.md
androidApp/: build.gradle.kts
cli/: auth.py  gateway.py  main.py  scan.py  storage.py
desktopApp/: build.gradle.kts
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
lambda/authorizer/: handler.py  requirements.txt
lambda/revoke/: handler.py
lambda/sanitizer/: patterns.py  policy.py  sandwich.py  sanitizer.py
lambda/sts/: handler.py
scripts/: build_authorizer_layer.py  create_kb_index.py  create_test_users.py  get_jwt.py  ingest_docs.py  stop_costs.ps1
shared/: build.gradle.kts
terraform/: api_gateway.tf  backend.tf.example  bedrock_kb.tf  cloudtrail.tf  cognito.tf  dynamodb.tf  iam.tf  lambda_authorizer.tf  lambda_revoke.tf  lambda_sts.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/bootstrap/: main.tf
tests/: conftest.py
tests/auth/: conftest.py  test_step01_test_users.py  test_step02_authorizer.py  test_step04_revoke.py  test_step05_e2e_jwt.py
tests/cli/: test_step01_auth.py  test_step02_storage.py  test_step03_scan.py  test_step04_gateway.py  test_step05_cli_loop.py  test_step06_integration.py
tests/conversation/: test_step01_session_id.py  test_step02_history.py  test_step03_context_injection.py
tests/e2e/: _helpers.py  conftest.py  test_step01_fullflow.py  test_step02_security.py
tests/infra/: test_step01_terraform_validate.py  test_step02_iam.py  test_step03_dynamodb.py  test_step04_s3.py  test_step05_cognito.py  test_step06_cloudtrail.py  test_step07_api_gateway.py
tests/kb/: test_step01_terraform_kb.py  test_step02_ingest.py  (+3 more)
(+25 files in other folders)
