[project]
name = "iam-gateway"
version = "0.1.0"
description = "Multitenant GenAI Gateway with IAM and ABAC isolation"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.0.0",
    "opensearch-py>=3.2.0",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "aws: requires live AWS credentials but NOT AOSS/Bedrock KB (cost ~$0; run with -m 'aws and not aoss')",
    "aoss: requires Amazon OpenSearch Serverless ACTIVE + Bedrock KB (paid tier ~$1/2h; run with -m 'aoss')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bedrock metadataFilter API keys are camelCase (andAll, orAll, lessThanOrEquals).
# These test names mirror the literal API identifiers verbatim for traceability,
# so N802 (snake_case function names) is intentionally relaxed here.
"tests/kb/test_step03_metadata_filter.py" = ["N802"]
"tests/kb/test_step05_abac_isolation.py" = ["N802"]

[dependency-groups]
dev = [
    "boto3>=1.43.26",
    "cryptography>=44.0.0",
    "PyJWT>=2.9.0",
    "pytest>=9.0.3",
    "requests>=2.32.0",
    "ruff>=0.15.16",
]
